Solution described - draft.

--- a/evaluation.tex
+++ b/evaluation.tex
@@ -1,4 +1,4 @@
-\chapter{Evaluation}
+\chapter{Evaluation}\label{chapter:evaluation}
 \blindtext
 
 \section{CloudASR Platform Benchmarks}
@@ -8,8 +8,12 @@
 
 \section{Batch Recognition Benchmark}
 \blindtext
+\TODOIMG{Batch recognition RTF}{fig:batch-benchmark}
 \blindtext
+
 
 \section{Online Recognition Benchmark}
 \blindtext
+\TODOIMG{Online recognition RTF}{fig:online-benchmark}
 \blindtext
+
