--- a/technologies.tex
+++ b/technologies.tex
@@ -168,3 +168,5 @@ Because the demo demonstrates the online speech recognition mode,
   thus, CloudASR uses \textbf{Socket.IO}\footnote{\url{http://socket.io/}} to send stream of chunks to the API
   and to receieve stream of results from the API.
 
+
+\IDEA{Mention MySQL}
