--- a/thesis.tex
+++ b/thesis.tex
@@ -232,10 +232,22 @@ Mgr. Ing. Filip Jurčíček Ph.D., Institute of Formal and Applied Linguistics
 % mimo MFF UK v angličtině
 
 Abstract:
+This thesis presents a cloud platform for automatic speech recognition, CloudASR,
+  built on top of Kaldi speech recognition toolkit.
+The platform supports both batch and online speech recognition mode
+  and it has an annotation interface for transcription of the obtained recordings.
+The key features of the platform are scalability, customizability and easy deployment.
+The benchmarks of the platform show
+  that the platform achieves comparable performance with Google Speech API in terms of latency
+  and it can achieve better accuracy on specific domains.
+Furthermore, the benchmarks shows that the platform is able to handle more than 1000 parallel requests given enough computational resources.
+
+
 % abstrakt v rozsahu 80-200 slov v angličtině; nejedná se však o překlad
 % zadání diplomové práce
 
 Keywords:
+cloud, Kaldi, ASR
 % 3 až 5 klíčových slov v angličtině
 
 \vss}
