Evaluation draft added.

--- a/citations.bib
+++ b/citations.bib
@@ -63,3 +63,33 @@
   year={1993},
   publisher={Springer}
 }
+
+@book{janert2013feedback,
+  Author = {Philipp K. Janert},
+  Title = {Feedback Control for Computer Systems},
+  Publisher = {O'Reilly Media},
+  Year = {2013},
+}
+
+@article{korvas2014vystadial,
+  title={Vystadial 2013--Czech data},
+  author={Korvas, Mat{\v{e}}j and Pl{\'a}tek, Ond{\v{r}}ej and Du{\v{s}}ek, Ond{\v{r}}ej and {\v{Z}}ilka, Luk{\'a}{\v{s}} and Jur{\v{c}}{\'\i}{\v{c}}ek, Filip},
+  year={2014},
+  publisher={Faculty of Mathematics and Physics, Charles University in Prague}
+}
+
+@inproceedings{sperber2014fly,
+  title={On-the-Fly User Modeling for Cost-Sensitive Correction of Speech Transcripts},
+  author={Sperber, Matthias and Neubig, Graham and Nakamura, Satoshi and Waibel, Alex},
+  booktitle={Spoken Language Technology Workshop (SLT)},
+  year={2014}
+}
+
+@inproceedings{gong2010press,
+  title={Press: Predictive elastic resource scaling for cloud systems},
+  author={Gong, Zhenhuan and Gu, Xiaohui and Wilkes, John},
+  booktitle={Network and Service Management (CNSM), 2010 International Conference on},
+  pages={9--16},
+  year={2010},
+  organization={IEEE}
+}
