Missing screen added to used technologies chapter.

--- a/technologies.tex
+++ b/technologies.tex
@@ -153,7 +153,13 @@ Frontend uses several well-known open-source libraries, namely,
   \textbf{jQuery}\footnote{\url{https://jquery.com/}}
   and \textbf{Angular.js}\footnote{\url{https://angularjs.org/}} for interactive elements on the web.
 
-\TODOIMG{fig:demo}{CloudASR Web Demo}
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=0.95\textwidth]{./img/demo.pdf}
+
+  \caption{Screen of the Web Demo}
+  \label{fig:demo}
+\end{figure}
 
 Modern web browsers supports \textbf{WebAudio API}\footnote{\url{http://webaudio.github.io/web-audio-api/}},
   which is a high-level JavaScript API for processing and synthesizing audio in web applications.
