--- a/introduction.tex
+++ b/introduction.tex
@@ -23,8 +23,8 @@ Consequently, \textbf{the second goal of the thesis is to create an annotation i
   so that recordings obtained by CloudASR platform can be annotated and given back to the community.
 
 In the following text there will be described development and deployment of CloudASR platform and of its annotation interface.
-Chapter 1 introduces Automatic Speech Recognition theory and tools related to CloudASR.
-In Chapter 2 tools used for CloudASR development and deployment are presented.
-Implementation of CloudASR platform is described in Chapter 3.
-Chapter 4 contains results of conducted benchmarks.
-Finally, Chapter 5 concludes this thesis.
+Chapter~1 introduces Automatic Speech Recognition theory and tools related to CloudASR.
+In Chapter~2 tools used for CloudASR development and deployment are presented.
+Implementation of CloudASR platform is described in Chapter~3.
+Chapter~4 contains results of conducted benchmarks.
+Finally, Chapter~5 concludes this thesis.
