New paragraphs added to Solution chapter.

--- a/citations.bib
+++ b/citations.bib
@@ -93,3 +93,26 @@
   year={2010},
   organization={IEEE}
 }
+
+@article{fowler2006continuous,
+  title={Continuous integration},
+  author={Fowler, Martin and Foemmel, Matthew},
+  journal={Thought-Works) http://www. thoughtworks. com/Continuous Integration. pdf},
+  year={2006}
+}
+
+@book{humble2010continuous,
+  title={Continuous delivery: reliable software releases through build, test, and deployment automation},
+  author={Humble, Jez and Farley, David},
+  year={2010},
+  publisher={Pearson Education}
+}
+
+@inproceedings{jurcicek2014alex,
+  title={Alex: A Statistical Dialogue Systems Framework},
+  author={Jur{\v{c}}{\'\i}{\v{c}}ek, Filip and Du{\v{s}}ek, Ond{\v{r}}ej and Pl{\'a}tek, Ond{\v{r}}ej and {\v{Z}}ilka, Luk{\'a}{\v{s}}},
+  booktitle={Text, Speech and Dialogue},
+  pages={587--594},
+  year={2014},
+  organization={Springer}
+}
